--- a/gb/19/10/24/n11610494.md
+++ b/gb/19/10/24/n11610494.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/iqhfjd310/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqhfjd310/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/iqhfjd310/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iqhfjd310/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/iqhfjd310/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqhfjd310/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/iqhfjd310/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iqhfjd310/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/iqhfjd310/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iqhfjd310/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/iqhfjd310/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iqhfjd310/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/iqhfjd310/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iqhfjd310/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/iqhfjd310/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iqhfjd310/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/iqhfjd310/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/iqhfjd310/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/iqhfjd310/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/iqhfjd310/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/iqhfjd310/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/iqhfjd310/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/iqhfjd310/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/iqhfjd310/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>新西兰优先党年会告诉我们什么</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1152548543-600x400.jpg" />
 <h6>刚过去的这个周末，新西兰优先党在基督城召开了第26届代表大会。资深政治家Winston Peters在他的主题演讲中猛烈抨击国家党，提出了优先党2020年的选举方向，但他并没有说他不准备与反对党达成政治协议。 (Hagen Hopkins/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2019年10月25日讯】（大纪元记者宁柏综合报导）在刚过去的这个周末，<ahref="https://github.com/iqhfjd310/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a><ahref="https://github.com/iqhfjd310/djy/blob/master/gb/tag/%E4%BC%98%E5%85%88%E5%85%9A.md#1">优先党</a>在基督城召开了第26届代表大会。资深政治家Winston Peters在他的主题演讲中猛烈抨击<ahref="https://github.com/iqhfjd310/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E5%85%9A.md#1">国家党</a>，提出了优先党2020年的选举方向，但他并没有说他不准备与反对党达成<ahref="https://github.com/iqhfjd310/djy/blob/master/gb/tag/%E6%94%BF%E6%B2%BB%E5%8D%8F%E8%AE%AE.md#1">政治协议</a>。</p>
-<p>本次年会的特点是，Peters作为现任副总理宝刀未老，依旧思路清晰；年轻一代勇于突破，为开创新天地积极发挥作用，成长令人可喜。因此这次年会被广泛认为是<ahref="https://github.com/iqhfjd310/djy/blob/master/gb/tag/%E4%BC%98%E5%85%88%E5%85%9A.md#1">优先党</a>的又一次成功亮相，远非走秀表演。</p>
-<h3>向<ahref="https://github.com/iqhfjd310/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E5%85%9A.md#1">国家党</a>抛出有条件的橄榄枝</h3>
+<p>【大纪元2019年10月25日讯】（大纪元记者宁柏综合报导）在刚过去的这个周末，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BC%98%E5%85%88%E5%85%9A.md#1">优先党</a>在基督城召开了第26届代表大会。资深政治家Winston Peters在他的主题演讲中猛烈抨击<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E5%85%9A.md#1">国家党</a>，提出了优先党2020年的选举方向，但他并没有说他不准备与反对党达成<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%94%BF%E6%B2%BB%E5%8D%8F%E8%AE%AE.md#1">政治协议</a>。</p>
+<p>本次年会的特点是，Peters作为现任副总理宝刀未老，依旧思路清晰；年轻一代勇于突破，为开创新天地积极发挥作用，成长令人可喜。因此这次年会被广泛认为是<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BC%98%E5%85%88%E5%85%9A.md#1">优先党</a>的又一次成功亮相，远非走秀表演。</p>
+<h3>向<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E5%85%9A.md#1">国家党</a>抛出有条件的橄榄枝</h3>
 <p>Peters在谈到明年大选的一揽子广泛政策构想时，详细地回顾了国家党的经济业绩，现任和以往个人成员。包括Simon Bridges, Paula Bennett 及前党魁John Key等人。他认为，“由John Key、Bill English和Steven Joyce组成的国家党醉心于在意识形态上推行新自由派计划。很清楚，他们的继任者Simon Bridges和Paul Goldsmith也是如此。”</p>
-<p>他觉得，可悲的是35年来国家党并没有发生任何改变，该党依然期望我们大家接受这样一种意识形态——即“雇主与工人、城镇与国家、城市大部分与小企业之间的相互对抗是减少不平等、解决无家可归或令所有<ahref="https://github.com/iqhfjd310/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>人有机会改善自己与家人生活的唯一途径。”</p>
+<p>他觉得，可悲的是35年来国家党并没有发生任何改变，该党依然期望我们大家接受这样一种意识形态——即“雇主与工人、城镇与国家、城市大部分与小企业之间的相互对抗是减少不平等、解决无家可归或令所有<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>人有机会改善自己与家人生活的唯一途径。”</p>
 <p>Peters明确指出，如果国家党想在2020年和优先党达成联盟协议，就必须进行改革。</p>
 <p>他说：“除非他们做出改变，我们也希望他们这么做，否则未来的国家党在遭遇经济困境时，将只能依赖实施经济紧缩政策，以应对新西兰社会的各种动荡不安现象。我们希望他们有所改变，但事实是，新西兰优先党目前作为一中心党，是名副其实的‘全民党’，而且这里用的是大写的N——就是当它真正将新西兰放在第一位时。”</p>
 <p>Peters的总体规划包括：在2020年再次将自己定位为“造王者”，他为自己一贯的立场感到自信，即他明确表示不会在大选前选择与任何一个政党结成政治同盟。</p>
@@ -32,42 +32,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/19/9/28/n11552837.md#1">红二代：党内不同声音增加 习近平压力大</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/19/9/29/n11554050.md#1">在纽港人集会 连线对抗极权</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/19/9/29/n11555354.md#1">反中共迫害人权 维吾尔人在纽发声</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/19/10/1/n11558107.md#1">遭电子转账欺诈 万锦承包商损失2,775元</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/19/9/30/n11558556.md#1">今年烟花节 Countdown不卖烟花</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/19/10/1/n11558754.md#1">戈壁东：海外民运为中共国殇送终</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/19/10/1/n11559320.md#1">新西兰邮政因信件数量下降亏损1.21亿元</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/19/10/23/n11607900.md#1">房贷利率创新低 购房可负担性提升</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/19/10/24/n11608209.md#1">奥克兰市中心大火已得到控制</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/20/7/20/n12268421.md#1">工党赞同国家党收取归国人3000元隔离费提议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/28/n11552837.md#1">红二代：党内不同声音增加 习近平压力大</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/29/n11554050.md#1">在纽港人集会 连线对抗极权</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/29/n11555354.md#1">反中共迫害人权 维吾尔人在纽发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/10/1/n11558107.md#1">遭电子转账欺诈 万锦承包商损失2,775元</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/30/n11558556.md#1">今年烟花节 Countdown不卖烟花</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/10/1/n11558754.md#1">戈壁东：海外民运为中共国殇送终</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/10/1/n11559320.md#1">新西兰邮政因信件数量下降亏损1.21亿元</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/10/23/n11607900.md#1">房贷利率创新低 购房可负担性提升</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/10/24/n11608209.md#1">奥克兰市中心大火已得到控制</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691514.md#1">若执政 行动党承诺冻结最低薪 取消新福利</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11180163.md#1" target="_blank">【征文】章阁：中国古代专制吗（下）</a></li><li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/22/n10927324.md#1" target="_blank">跨国企业总经理修炼法轮功 受益无穷</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11256527.md#1" target="_blank">【征文】凌晓辉：贞洁论（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/10/n11580971.md#1" target="_blank">好莱坞大奖获得者 一位北京青年的音乐路</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/20/7/18/n12265847.md#1">长江2号洪水来袭 官媒承认三峡大坝位移变形</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/20/7/18/n12265081.md#1">【拍案惊奇】三峡水量暴增 中科院百人出走</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/20/7/19/n12266721.md#1">【翻墙必看】官媒终于承认三峡大坝变形</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/20/7/17/n12264288.md#1">红二代：赚钱的行业都垄断 老百姓有选择吗</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/20/7/18/n12266091.md#1">【新闻看点】大洪水北京甩锅？伊朗2500万染疫</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/20/7/17/n12264458.md#1">病情恶化放弃治疗 冯小刚排队买煎饼果子</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/20/7/17/n12263825.md#1">张玉嬿突现身 谢祖武见昔日旧爱吓到紧张起身</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/20/7/18/n12266356.md#1">女歌手染疫牵连TVB百人 病毒攻入港娱乐圈</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/20/7/17/n12264690.md#1">庆节目千集抛震撼弹 胡瓜：一二年内规划退休</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/20/7/18/n12265364.md#1">三浦春马年仅30岁家中身亡 多部新作公开在即</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/20/6/4/n12161581.md#1">【康熙大帝】恤农惠商 开创承平盛世</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/20/7/17/n12264106.md#1">【馨香雅句】为何他们守护正体字</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/20/6/5/n12163902.md#1">【命理】影响婚姻的女命八字</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/8/11/17/n2331978.md#1">父子二人 忘怨感德</a></li>
-<li><a href="https://github.com/iqhfjd310/djy/blob/master/gb/20/7/18/n12266012.md#1">台湾古典诗：游小乌来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962520.md#1">企业家吁召开紧急会议 矛头直指中共最高层</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/iqhfjd310/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/iqhfjd310/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/24/n11610494.htm">新西兰优先党年会告诉我们什么</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/24/n11610494.htm">新西兰优先党年会告诉我们什么</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/iqhfjd310/djy/blob/master/gb/19/10/24/n11610494.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/iqhfjd310/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/iqhfjd310/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/iqhfjd310/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/iqhfjd310/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqhfjd310/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/10/24/n11610494.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
